# samanthas-telegram-bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  pyproject.toml  sample.env
.github/: dependabot.yml
.github/workflows/: main.yml
bot/: main.py
bot/api_clients/: __init__.py
bot/api_clients/auxil/: models.py
bot/api_clients/backend/: client.py  exceptions.py
bot/api_clients/base/: base_api_client.py  exceptions.py
bot/api_clients/chatwoot/: client.py  exceptions.py
bot/api_clients/smalltalk/: client.py  exceptions.py
bot/application_start/: __init__.py  bot_data_loader.py
bot/auxil/: constants.py  log_and_notify.py
bot/conversation/auxil/: callback_query_reply_sender.py  conversation_handler.py  helpers.py  message_sender.py
bot/data_structures/: constants.py  context_types.py  custom_context.py  custom_updates.py  enums.py  literal_types.py  models.py
data/: assessment_temp.csv  bot_phrases.csv  read_phrases.py
samanthas_telegram_bot/: api_queries.py  assessment.py  auxil.py  big_messages.py  callback_query_reply_sender.py  constants.py  custom_context_types.py  inline_keyboards.py  main.py  send_message.py  student_bot.py  user_data.py
samanthas_telegram_bot/api_clients/: __init__.py  smalltalk.py
samanthas_telegram_bot/api_clients/auxil/: constants.py  enums.py  models.py
samanthas_telegram_bot/api_clients/backend/: backend_client.py  client.py  client_without_update_and_context.py  exceptions.py
samanthas_telegram_bot/api_clients/base/: base_api_client.py  exceptions.py
samanthas_telegram_bot/api_clients/chatwoot/: client.py  exceptions.py
samanthas_telegram_bot/api_clients/smalltalk/: client.py  exceptions.py  smalltalk_client.py
samanthas_telegram_bot/api_queries/: __init__.py  api_client.py  backend_client.py  base_api_client.py  bot_init.py  bot_start.py  check.py  conversation.py  create_people.py  person_creator.py  registration.py  send.py  send_get.py  smalltalk.py
samanthas_telegram_bot/api_queries/auxil/: constants.py  data_maker.py  enums.py  exceptions.py  make_request_get_data.py  models.py  requests_to_backend.py  send_to_backend.py
samanthas_telegram_bot/application_start/: __init__.py  bot_data_loader.py  phrases.csv
samanthas_telegram_bot/auxil/: constants.py  escape_for_markdown.py  exceptions.py  log_and_notify.py
samanthas_telegram_bot/bot_data_loader/: __init__.py  bot_data_loader.py  phrases.csv
samanthas_telegram_bot/callbacks/: common.py  student.py  teacher.py
samanthas_telegram_bot/callbacks/auxil/: callback_query_reply_sender.py  message_sender.py  send_message.py
samanthas_telegram_bot/conversation/: constants_enums.py  custom_context_types.py  user_data.py
samanthas_telegram_bot/conversation/auxil/: assessment.py  bot_init.py  callback_query_reply_sender.py  chatwoot.py  conversation_handler.py  decorators.py  enums.py  helpers.py  load_phrases.py  log_and_report.py  message_sender.py  multi_state_returns.py  phrases.csv  prepare_assessment.py  read_phrases.py  send_to_admin_group.py  shortcuts.py  time_slot_handlers.py  time_slot_helpers.py
samanthas_telegram_bot/conversation/callbacks/: common.py  student.py  teacher.py
samanthas_telegram_bot/conversation/constants_dataclasses/: constants_enums.py  custom_context_types.py  user_data.py
samanthas_telegram_bot/conversation/data_structures/: age_range.py  assessment.py  assessment_question_option.py  bot_data.py  chat_data.py  constants.py  context_types.py  custom_context_types.py  enums.py  helper_classes.py  user_data.py
samanthas_telegram_bot/conversation/states/: common.py
samanthas_telegram_bot/data_structures/: constants.py  context_types.py  custom_context.py  custom_updates.py  enums.py  helper_classes.py  models.py  models_helper_classes.py
tests/: constants.py
tests/api_requests/: test_smalltalk.py
tests/api_requests/smalltalk_json/: status_completed_score_b2.json  status_completed_score_b2p.json  status_completed_score_c1.json  status_processing.json  (+2 more)
(+24 files in other folders)
