[tool.poetry]
name = "samanthas-telegram-bot"
version = "0.1.0"
description = "Telegram bot(s) for Samanthas Group"
authors = ["Dmitry Kolomatskiy <58207913+lemontree210@users.noreply.github.com>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [{include = "samanthas_telegram_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = {extras = ["webhooks"], version = "^20.7"}
phonenumberslite = "^8.13.29"
python-dotenv = "^1.0.1"
uvicorn = "^0.27.0"
starlette = "^0.36.1"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
ruff = "^0.2.0"
pre-commit = "^3.6.0"
icecream = "^2.1.3"
isort = "^5.13.2"
mypy = "^1.8.0"
pytest = "^8.0.0"

[tool.black]
line-length = 99
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 99

[tool.mypy]
ignore_missing_imports = true
python_version = "3.10"
strict = true
implicit_optional = true
disallow_untyped_calls = false
warn_return_any = false

[[tool.mypy.overrides]]
module = [
  "tests.*"
]
ignore_errors = true

[tool.ruff]
line-length = 99

# Assume Python 3.10.
target-version = "py310"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
